deployment/app/webapp/apply.template.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: kc
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: kc
      containers:
        - name: app
          image: "registry.protodesign.cn:36000/kcserver/webapp:$version_tag"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          resources: {}
          startupProbe:
            failureThreshold: 300
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
kind: Service
apiVersion: v1
metadata:
  name: webapp
  namespace: kc
spec:
  selector:
    app: webapp
  type: ClusterIP
  ports:
    - name: web
      port: 10004
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: kc
spec:
  ingressClassName: nginx
  rules:
    - host: protodesign.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 10004
    - host: test.protodesign.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 10004
